--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,12 +2,14 @@
 layout: archive
 ---
 
+<! --
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-<h3> "Hello World" </h3>
 
 {% for post in paginator.posts %}
   {% include archive-single.html %}
 {% endfor %}
 
 {% include paginator.html %}
+-->
+
+<h3 class="archiv_subtitle"> "Hello World" </h3>
