--- a/_layouts/papers.html
+++ b/_layouts/papers.html
@@ -4,7 +4,7 @@ layout: archive
 
 <div class="home">
 
-  <h1>My research papers</h1>
+    <!-- <h1>My research papers</h1> -->
 
   {{ content }}
 
