--- a/_layouts/papers.html
+++ b/_layouts/papers.html
@@ -24,7 +24,7 @@ layout: archive
               lang="{{ lang }}"
             {% endif %}>
             {% endif %}
-            {{ pub.title | escape }}{% if post.external-url %} &rarr;{% endif %}{% if pub.url %}</a>{% endif %}
+            <!-- {{ pub.title | escape }}{% if post.external-url %} &rarr;{% endif %}{% if pub.url %}</a>{% endif %} -->
         </h2>
         <h6>
          <span class="post-meta">{{ pub.authors }}</span>
