--- a/_layouts/papers.html
+++ b/_layouts/papers.html
@@ -19,7 +19,7 @@ layout: archive
         <h2>
           {% if pub.url %}
             <a class="post-link"
-              href="{{ pub.url  }}"
+              href="{{ pub.url  }}" target="_blank"
             {% if lang != empty %}
               lang="{{ lang }}"
             {% endif %}>
