--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -24,7 +24,7 @@ layout: archive
             <span class="post-meta">{{ proj.year }}, {{ proj.venue }}</span>
             {% if proj.code %}
             <br>
-            <span class="post-meta"><a class="post-link" href="{{ proj.code }}">Code</a></span>
+            <span class="post-meta"><a class="post-link" href="{{ proj.code }}" target="_blank">Code</a></span>
             {% endif %}
             <br>
         </h6>
