--- a/_layouts/projects.html
+++ b/_layouts/projects.html
@@ -17,14 +17,14 @@ layout: archive
 
       <li style="margin-bottom:7%">
         <h2>
-          <a class="post-link" {% if proj.url != empty %}href="{{ proj.url  }}" target="_blank"{% endif %}{% if lang != empty %} lang="{{ lang }}"{% endif %}>{{ proj.title | escape }}{% if post.external-url %} &rarr;{% endif %}</a>
+          <a {% if proj.url != empty %}href="{{ proj.url  }}" target="_blank"{% endif %}{% if lang != empty %} lang="{{ lang }}"{% endif %}>{{ proj.title | escape }}{% if post.external-url %} &rarr;{% endif %}</a>
         </h2>
         <h6>
-            <span class="post-meta">{{ proj.authors }}</span>
-            <span class="post-meta">{{ proj.year }}, {{ proj.venue }}</span>
+            <span {{ proj.authors }}</span>
+            <span {{ proj.year }}, {{ proj.venue }}</span>
             {% if proj.code %}
             <br>
-            <span class="post-meta"><a class="post-link" href="{{ proj.code }}" target="_blank">Code</a></span>
+            <span><a class="post-link" href="{{ proj.code }}" target="_blank">Code</a></span>
             {% endif %}
             <br>
         </h6>
